# BattleTowerManager

./: CMakeLists.txt
css/: Member.css  Move.css
csv/: battleFrontierFull.csv  battleSubwayEvs.csv  bwMons.csv  bwMoves.csv  bwNormal.csv  bwSuper.csv  dpGroup1.csv  dpGroup2.csv  dpGroup3.csv  dpGroup4.csv  dpMons.csv  dpptMoves.csv  gen4Types.csv  ptHgssFrontier.csv  pthgssGroup1.csv  pthgssGroup2.csv  pthgssGroup3.csv  pthgssGroup4.csv  test.csv  xyMons.csv  xyMoves.csv  xyNormal.csv  xySuper.csv
database/: gen4.db  gen4new.db  gen4prev.db  gen5.db
resources/: Member.cpp  Member.h  Member.ui  Move.cpp  Move.h  Move.ui  MoveSet.cpp  MoveSet.h  MoveSet.ui  UMove.cpp  UMove.h  UMove.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  oldMove.ui  testMove.ui
src/: IMove.cpp  IMove.h  Mon.cpp  Mon.h  MoveFactory.cpp  MoveFactory.h  main.cpp
src/Moves/: PhysMove.cpp  PhysMove.h  SeismicToss.cpp  SeismicToss.h  SpecialMove.cpp  SpecialMove.h  StatusMove.cpp  StatusMove.h
